--- a/style.css
+++ b/style.css
@@ -2,17 +2,17 @@
     --primary-colour:rgb(113, 115, 184);
     --secondary-colour:rgb(255, 165, 0);
 }
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&display=swap');
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 body{
-    font-family: "Courier 10 Pitch",sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 .container{
-    max-width: 50rem;
+    max-width: 70rem;
     margin:auto;
     -webkit-box-shadow: 0px 4px  22px -6px rgba(0,0,0,0.75);
     -moz-box-shadow:0px 4px  22px -6px rgba(0,0,0,0.75) ;
@@ -45,7 +45,7 @@ header h3{
 }
 .btn{
     background: transparent;
-    width: 5rem;
+    width: 4rem;
     height: 2rem;
     border-radius: 1rem;
     cursor: pointer;
