--- a/style.css
+++ b/style.css
@@ -15,14 +15,15 @@ body{
     font-family: 'Poppins', sans-serif;
 }
 .container{
-    max-width: 50rem;
-    margin:auto;
+    max-width: fit-content;
+    margin:3rem auto;
     -webkit-box-shadow: 0px 4px  22px -6px rgba(0,0,0,0.75);
     -moz-box-shadow:0px 4px  22px -6px rgba(0,0,0,0.75) ;
     box-shadow: 0px 4px  22px -6px rgba(0,0,0,0.75);
 }
 header{
     width: 100%;
+    display: block;
     background:var(--primary-colour);
     padding: 1rem;
 }
@@ -45,12 +46,13 @@ header h3{
 }
 .btn{
     background: transparent;
-    width: 4rem;
-    height: 2rem;
+    width: 8rem;
+    height: 2.2rem;
     border: violet;
     border-radius: 2rem;
     cursor: pointer;
     outline: none;
+    margin:auto;
     font-family: var(--font);
     transition: all 0.5s ease;
 }
@@ -141,7 +143,8 @@ header h3{
 
 .btn-model{
     background: var(--primary-colour);
-    width: 9rem;
+    width: 7rem;
+    display: block;
     color: white;
     border: none;
 }
@@ -152,4 +155,15 @@ input{
     margin-bottom: 1rem;
     text-indent: .5rem;
     outline: none;
+}
+.btn-auth{
+    display:block;
+    text-align: center;
+}
+.btn-model{
+
+    margin-top: 5rem;
+}
+.signup-model,.signin-model{
+    display: none;
 }
